--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,9 @@
   "tasks": {
     "dev": "deno run --watch main.ts"
   },
+  "fmt": {
+    "lineWidth": 100
+  },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "@std/json": "jsr:@std/json@^1.0.2",
